# namebump

./: README.md  pyproject.toml  todo
namebump/: __init__.py  client.py  defs.py  keypair.py  nickname.py  packet.py  server.py  settings.py  utils.py
scripts/: gen_keys.py  namebump.sql  run_server.py  set_env.sh
tests/: run_from_server.py  test_status.py
