[build-system]
requires = ["setuptools>=68", "wheel", "aionetiface"]
build-backend = "setuptools.build_meta"

[project]
name = "namebump"
version = "0.0.5"
description = "Namebump is a registrationless, key-authenticated name registry where writes bump prior values."
readme = "README.md"
requires-python = ">=3.5"
license = {file = "LICENSE"}
authors = [
    {name = "Matthew Roberts"}
]
keywords = ["utility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/robertsdotpm/namebump"